--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,10 @@ spring.jpa.hibernate.ddl-auto=update
 
 server.forward-headers-strategy=FRAMEWORK
 server.error.include-message=always
+
+springdoc.swagger-ui.enable=true
+
+springdoc.api-docs.path=/docs
+springdoc.openapi.info.title=API de Afericoes
+
+spring.config.encoding.charset=UTF-8
